Prevent collapsed dropdowns from having height.
Collapsed dropdowns are hidden via `opacity:0;` and
`visiblility:hidden;`. This doesn't prevent them from having a
height, which can be an issue when the language selector is
at the bottom of the page, producing a large gap near the footer.

Bug: T314546

--- a/resources/common/components/MenuDropdownCheckbox.less
+++ b/resources/common/components/MenuDropdownCheckbox.less
@@ -17,7 +17,9 @@
 		top: 100%;
 		left: -@border-width-base;
 		opacity: 0;
+		height: 0;
 		visibility: hidden;
+		overflow: hidden;
 		// The menu content should not be narrower than the menu button.
 		min-width: 100%;
 		margin: 0;
@@ -71,6 +73,7 @@
 	&:checked ~ .vector-menu-content {
 		opacity: 1;
 		visibility: visible;
+		height: auto;
 	}
 
 	:not( :checked ) > & {
